@@ -1,6 +1,7 @@
 Version 0.0.3 ()
 - Fix `getParamset` for `MASTER`, returns default or value from `putParamset`
-- Add basic `putParamset` method
+- Add `putParamset` method
+- Refactoring
 
 Version 0.0.2 (2019-12-16)
 - Add `getParamset` method
